# NamedContainer

./: .clang-format  CMakeLists.txt  docs.odt  readme.md
example/: CMakeLists.txt  example.cpp
include/NamedContainer/: NamedContainer.hpp
libsrc/: NamedContainer.cpp
tests/integration/: CMakeLists.txt  likeADict.cpp
tests/unit/: CMakeLists.txt  NamedContainerTest.cpp
